--- a/demo/dev.html
+++ b/demo/dev.html
@@ -10,8 +10,21 @@
     <div>
         <ob-session-update key="myObj" value='{"greeting": "hello"}'></ob-session-update>
         <ob-session-watch key="myObj"></ob-session-watch>
-        <script type="module" src="../ob-session-watch.js"></script>
-        <script type="module" src="../ob-session-update.js"></script>
+
+        <!-- Use experimental import maps -->
+        <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
+        <script type="importmap-shim">
+            {
+                "imports": {
+                    "xtal-element/": "../node_modules/xtal-element/",
+                    "trans-render/": "../node_modules/trans-render/"
+                }
+            }
+            </script>
+        <script  type="module-shim">
+            import "../ob-session-watch.js";
+            import "../ob-session-update.js"
+        </script>
     </div>
 </body>
 </html>
