--- a/demo/dev.html
+++ b/demo/dev.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <ob-session-update key="myObj" value='{"greeting": "hello"}'></ob-session-update>
+        <ob-session-update key="myObj" val='{"greeting": "hello"}' is-json></ob-session-update>
         <ob-session-watch key="myObj"></ob-session-watch>
 
         <!-- Use experimental import maps -->
