--- a/demo/Example1.html
+++ b/demo/Example1.html
@@ -8,14 +8,12 @@
         {
             "imports": {
                 "@power-elements/": "/node_modules/@power-elements/",
-                "mount-observer/": "/node_modules/mount-observer/",
-                "trans-render/": "/node_modules/trans-render/",
-                "xtal-element/": "/node_modules/xtal-element/"
+                "trans-render/": "/node_modules/trans-render/"
             }
         }
     </script>
     <script type=module>
-        import '/ob-session.js';
+        import '/index.js';
         import '@power-elements/json-viewer/json-viewer.js';
     </script>
 </head>
